<resources>
    <string name="app_name">PickItUp</string>
    <string name="exportar_artigos">Exportar Artigos</string>
    <string name="importar_artigos">Importar Artigos</string>
    <string name="consulta_artigos">Consulta Artigos</string>
    <string name="menu">Menu</string>
    <string name="bdcreated">Base de Dados Criada!</string>
    <string name="op_es">Opções</string>
    <string name="gravar">Gravar</string>
    <string name="servidor">Servidor</string>
    <string name="utilizador">Utilizador</string>
    <string name="password">Password</string>
    <string name="bd">Base de Dados</string>
    <string name="sucess">Gravado com Sucesso!</string>
    <string name="sim">Sim</string>
    <string name="nao">Não</string>
    <string name="delbd">Vai reconstruir a tabela de Artigos, tem a certeza?</string>
    <string name="sql">A atualizar registo </string>
    <string name="de"> de </string>
</resources>
