<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#000"
    tools:context=".Menu">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/border">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:text="@string/menu"
            android:textSize="35sp"
            android:textColor="#39A1FF"

            />
        <ImageView
            android:layout_width="200dp"
            android:layout_height="fill_parent"
            android:layout_marginStart="15dp"
            android:contentDescription="@string/app_name"
            android:background="@drawable/logo"/>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal"
            android:gravity="end">

            <ImageButton
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:id="@+id/btnsettings"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="15dp"
                android:contentDescription="@string/op_es"
                android:background="@drawable/ic_action_settings_applications"
                />

        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:gravity="center">

        <Button
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:text="@string/consulta_artigos"
            android:textColor="#39A1FF"
            android:background="@drawable/border"
            android:id="@+id/stview"/>

        <Button
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:text="@string/exportar_artigos"
            android:textColor="#39A1FF"
            android:layout_marginTop="10dp"
            android:background="@drawable/border"
            android:id="@+id/stexport"/>

        <Button
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:text="@string/importar_artigos"
            android:textColor="#39A1FF"
            android:layout_marginTop="10dp"
            android:background="@drawable/border"
            android:id="@+id/stimport"/>

    </LinearLayout>

</LinearLayout>